--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,65 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-color: black;
+  color: grey;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  text-align: center;
+}
+
+section {
+  width: 600px;
+  margin-left: 20px;
+  margin-top: 60px;
+}
+
+.new-recipe {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+  gap: 3rem;
+}
+
+label {
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+}
+
+label h3 {
+  width: 120px;
+}
+
+input,
+textarea {
+  border: none;
+  outline: none;
+  width: 400px;
+  font-family: "Courier New", Courier, monospace;
+}
+
+input {
+  height: 2rem;
+}
+
+textarea {
+  resize: vertical;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  width: 100px;
+  background-color: grey;
+  color: black;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.recipe-card {
+  border: solid 2px;
+  border-radius: 20px;
+  padding: 1rem;
+  margin-top: 1rem;
+}
+
+p {
+  white-space: preserve;
 }
